--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="div1">
-    <h1>Will you be my Valentine<span id="color-heart">&hearts;</span> ? 
+    <h1>Will you be my Valentine? 
     </h1>
     <div id="div2">
         <button type="button" id="yesbtn"> YES</button>
