--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Will you be my Valentine? 
     </h1>
     <div id="div2">
-        <button type="button" id="yesbtn"> YES</button>
+        <button type="button" id="yesbtn"><a href="">YES</a></button>
         <button type="button" id="nobtn"><a href="">NO</a>
         </button>
     </div>
