--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       var yourName = document.getElementById('yourName').value;
   
       // Send data to the serverless function using a fetch API (AJAX)
-      fetch('/.C:\Users\EDMUND EDET\Documents\DEV\valentine\functions/sendEmail', {
+      fetch('/.netlify/functions/sendRequest', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
