--- a/index.html
+++ b/index.html
@@ -8,53 +8,25 @@
     <title>Bemyval</title>
 </head>
 <body>
-    <div class="div1">
+  <div id="whole-div">
+  <div class="first-tag ">
+    <p>I LOVE  YOU &hearts;</p>
+  </div>
+  <div class="first-tag 1"></div>
+  <div class="first-tag two"></div>
+  <div class="first-tag 3"></div>
+  
+</div>
+<div class="div1">
     <h1>Will you be my Valentine? 
     </h1>
-    <div id="div2">
-        <form>
-            <label for="friendEmail">Your Email:</label>
-            <input type="email" id="friendEmail" required>
-            <br>
-            <br>
-            <label for="yourName">Your Name:</label>
-            <input type="text" id="yourName" required>
-            <br>
-            <br>
-        <button type="button" id="yesbtn" onclick="sendRequest('YES')">YES</button>
-        <button type="button" id="nobtn" onclick="sendRequest('NO')"> NO
+    <div id="div2"> 
+        <button type="button" id="yesbtn">YES</button>
+        <button type="button" id="nobtn"> NO
         </button>
-    </form>
     </div>
 </div>
 
 
-<script>
-    function sendRequest(answer) {
-      var friendEmail = document.getElementById('friendEmail').value;
-      var yourName = document.getElementById('yourName').value;
-  
-      // Send data to the serverless function using a fetch API (AJAX)
-      fetch('/.netlify/functions/sendRequest', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ friendEmail, yourName, answer }),
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.success) {
-          alert(`Request sent to ${friendEmail} from ${yourName} with answer: ${answer}!`);
-        } else {
-          alert('Failed to send request. Please try again.');
-        }
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert('An error occurred. Please try again.');
-      });
-    }
-  </script>
-  </body>
+</body>
 </html>
