--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <div class="first-tag ">
     <p>I LOVE  YOU &hearts;</p>
   </div>
-  <div class="first-tag 1"></div>
-  <div class="first-tag two"></div>
-  <div class="first-tag 3"></div>
+  <div class="first-tag one">
+    <p>PLEASE SAY YES 🧎🏽‍♂️</p>
+  </div>
+  <div class="first-tag two">
+    <p>IT'S ALL I ASK🙏</p>
+  </div>
+  <div class="first-tag three">
+    <p>THINK FIRST</p>
+  </div>
   
 </div>
 <div class="div1">
