--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
     <h1>Will you be my Valentine? 
     </h1>
     <div id="div2"> 
-        <button type="button" id="yesbtn">YES</button>
-        <button type="button" id="nobtn"> NO
+        <button type="button" id="yesbtn" onclick="showAlert()">YES</button>
+        <button type="button" id="nobtn" onclick="displayAlert()"> NO
         </button>
     </div>
 </div>
-
-
+<script>
+  function showAlert() {
+  alert("Yayy! Await feb 14th for your surprise");
+}
+function displayAlert() {
+  alert("FUCK YOU!!!!");
+}
+</script>
 </body>
 </html>
