--- a/index.html
+++ b/index.html
@@ -40,5 +40,10 @@ function displayAlert() {
   alert("FUCK YOU!!!!");
 }
 </script>
+<footer>
+  <div class="footer-div">
+  <p class="footer-text">Edmundev&copy;2024</p>
+</div>
+</footer>
 </body>
 </html>
