--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Bemyval</title>
 </head>
 <body>
+  <nav>
+    <p class="footer-text">Edmundev&copy;2024</p>
+  </nav>
   <div id="whole-div">
   <div class="first-tag ">
     <p>I LOVE  YOU &hearts;</p>
@@ -40,10 +43,6 @@ function displayAlert() {
   alert("FUCK YOU!!!!");
 }
 </script>
-<footer>
-  <div class="footer-div">
-  <p class="footer-text">Edmundev&copy;2024</p>
-</div>
-</footer>
+
 </body>
 </html>
